footer color contrast issue

--- a/styles/dark-styles.scss
+++ b/styles/dark-styles.scss
@@ -334,10 +334,10 @@ strong {
   background-color: $surface-400;
 
   a {
-    color: $magenta-100;
+    color: $lightblue;
 
     &:hover {
-      color: $magenta-200;
+      color: $blue;
     }
   }
 
